<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/iniciar_sesion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pantallainicio"
    tools:context=".IniciarSesionActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_iniciar_sesion"
        android:layout_width="300dp"
        android:layout_height="350dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/logo"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/iniciar_sesion_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_iniciar_sesion"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/logo"/>

            <EditText
                android:id="@+id/edit_text_correo"
                android:layout_width="250dp"
                android:layout_height="44dp"
                android:hint="@string/hint_edit_text_correo"
                android:padding="10dp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/iniciar_sesion_titulo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                android:id="@+id/edit_text_contrasena"
                android:layout_width="250dp"
                android:layout_height="44dp"
                android:hint="@string/hint_edit_text_contrasena"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@id/edit_text_correo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/texto_no_tengo_cuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/texto_clickable_no_tengo_una_cuenta"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text_contrasena"/>

            <Button
                android:id="@+id/boton_iniciar_sesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/skyblue"
                android:text="@string/texto_boton_iniciar_sesion"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/texto_no_tengo_cuenta"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>